# xapian-core

./: CMakeLists.txt  Makefile.in  README.CMAKE  aclocal.m4  ar-lib  compile  config.h.in  config.h.in.cmake  config_h_cmake.txt  configure  v.old  version.h.in.cmake  version_h_cmake.txt  xapian-config.1  xapian-core.spec
api/: CMakeLists.txt  omdocument.cc  queryinternal.cc
backends/: CMakeLists.txt
backends/chert/: CMakeLists.txt
backends/glass/: CMakeLists.txt
backends/inmemory/: CMakeLists.txt
backends/multi/: CMakeLists.txt
backends/remote/: CMakeLists.txt  remote-database.cc
common/: CmakeLists.txt  debuglog.cc  debuglog.h  io_utils.cc  safewindows.h  socket_utils.cc
docs/: Makefile.in  admin_notes.html  bm25.html  collapsing.html  deprecation.html  docsource.mk  facets.html  geospatial.html  glossary.html  index.html  install.html  internals.html  intro_ir.html  matcherdesign.html  overview.html  postingsource.html  queryparser.html  remote.html  replication.html  scalability.html  serialisation.html  sorting.html  spelling.html  stemming.html  synonyms.html  termgenerator.html  tests.html  valueranges.html
docs/apidoc/html/: annotated.html  classXapian_1_1AssertionError-members.html  classXapian_1_1AssertionError.html  classXapian_1_1BB2Weight-members.html  classXapian_1_1BB2Weight.html  classXapian_1_1BM25PlusWeight-members.html  classXapian_1_1BM25PlusWeight.html  classXapian_1_1BM25Weight-members.html  classXapian_1_1BM25Weight.html  classXapian_1_1BoolWeight-members.html  classXapian_1_1BoolWeight.html  classXapian_1_1Compactor-members.html  classXapian_1_1Compactor.html  classXapian_1_1CoordWeight-members.html  classXapian_1_1CoordWeight.html  classXapian_1_1DLHWeight-members.html  classXapian_1_1DLHWeight.html  classXapian_1_1DPHWeight-members.html  classXapian_1_1DPHWeight.html  classXapian_1_1Database-members.html  classXapian_1_1Database.html  classXapian_1_1DatabaseCorruptError-members.html  classXapian_1_1DatabaseCorruptError.html  classXapian_1_1DatabaseCreateError-members.html  classXapian_1_1DatabaseCreateError.html  classXapian_1_1DatabaseError-members.html  classXapian_1_1DatabaseError.html  classXapian_1_1DatabaseLockError-members.html  classXapian_1_1DatabaseLockError.html  classXapian_1_1DatabaseModifiedError-members.html  classXapian_1_1DatabaseModifiedError.html  classXapian_1_1DatabaseOpeningError-members.html  classXapian_1_1DatabaseOpeningError.html  classXapian_1_1DatabaseVersionError-members.html  classXapian_1_1DatabaseVersionError.html  classXapian_1_1DateRangeProcessor-members.html  classXapian_1_1DateRangeProcessor.html  classXapian_1_1DateValueRangeProcessor-members.html  classXapian_1_1DateValueRangeProcessor.html  classXapian_1_1DecreasingValueWeightPostingSource-members.html  (+253 more)
examples/: CMakeLists.txt  copydatabase.1  quest.1  xapian-metadata.1  xapian-pos.1
expand/: CMakeLists.txt
geospatial/: CMakeLists.txt
include/: CMakeLists.txt
include/xapian/: errordispatch.h  unicode.h
languages/: CMakeLists.txt  allsnowballheaders.h  arabic.cc  arabic.h  armenian.cc  basque.cc  catalan.cc  danish.cc  dutch.cc  earlyenglish.cc  english.cc  finnish.cc  french.cc  german.cc  german2.cc  hungarian.cc  indonesian.cc  indonesian.h  irish.cc  irish.h  italian.cc  kraaij_pohlmann.cc  kraaij_pohlmann.h  lithuanian.cc  lithuanian.h  lovins.cc  nepali.cc  nepali.h  norwegian.cc  porter.cc  portuguese.cc  romanian.cc  russian.cc  sbl-dispatch.h  spanish.cc  swedish.cc  tamil.cc  tamil.h  turkish.cc  turkish.h
languages/stopwords/: french.list
matcher/: CMakeLists.txt
net/: CMakeLists.txt
queryparser/: CMakeLists.txt  queryparser_internal.cc
tests/: CMakeLists.txt  Makefile.in  api_anydb.h  api_backend.h  api_closedb.h  api_collapse.h  api_collated.h  api_compact.h  api_compactold.h  api_db.h  api_generated.cc  api_generated.h  api_geospatial.h  api_matchspy.h  api_metadata.h  api_nodb.h  api_none.cc  api_none.h  api_opsynonym.h  api_opvalue.h  api_percentages.h  api_posdb.h  api_postingsource.h  api_qpbackend.h  api_query.cc  api_query.h  api_queryparser.h  api_replacedoc.h  api_replicate.h  api_scalability.h  api_serialise.h  api_snippets.h  api_sorting.h  api_spelling.h  api_stem.h  api_termgen.h  api_transdb.h  api_unicode.h  api_valuestats.h  api_valuestream.h  (+2 more)
tests/harness/: CMakeLists.txt  testsuite.h
tests/perftest/: CMakeLists.txt  perftest_matchdecider.h  perftest_randomidx.h
tests/soaktest/: CMakeLists.txt  soaktest_queries.h
unicode/: CMakeLists.txt
weight/: CMakeLists.txt
